<resources>
    <string name="app_name">PopularMovies</string>
    <string name="age_limit">18+</string>
    <string name="age_restriction">%1$s+</string>
    <string name="date_movie">22.04.2021</string>
    <string name="genre">боевики</string>
    <string name="movie_name">Гнев человеческий</string>
    <string name="movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="actors">Актеры</string>
    <string name="actor_1">Джейсон Стэйтем</string>
    <string name="actor_2">Холт Маккэллани</string>
    <string name="actor_3">Джош Харнетт</string>
    <string name="search_button">search button</string>
    <string name="popular_now">Популярное сейчас</string>
    <string name="main_empty_message">empty</string>
    <string name="item_movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя…</string>
    <string name="empty_movies_list">Сейчас здесь нет
фильмов, потяните вниз и вы получите список популярных фильмов</string>
    <string name="user_name">Константин</string>
    <string name="user_email">konst.89@mail.com</string>
    <string name="interests">Интересы</string>
    <string name="genre1">боевики</string>
    <string name="genre2">драмы</string>
    <string name="genre3">комедии</string>
    <string name="personal_data">Личные данные</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="user_password">*************</string>
    <string name="email">Почта</string>
    <string name="phone">Телефон</string>
    <string name="settings">Настройки</string>
    <string name="notifications_and_sounds">Уведомления и звуки</string>
    <string name="empty_string" />
    <string name="privacy">Конфедициальность</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string name="data_and_storage">Данные и память</string>
    <string name="app">Приложение</string>
    <string name="ask_question">Задать вопрос</string>
    <string name="exit">Выйти</string>
    <string name="tell_about_problem">Сообщить о проблеме</string>
    <string name="log_in">Войти</string>
    <string name="error_internet_connection">Проверьте интернет соединение!</string>
    <string name="title_search">ас</string>
    <string name="search_movie">Поиск фильма</string>
    <string name="toolbar_title">Популярные фильмы</string>
</resources>