<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/image_banner_jason"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/movie_description"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/artist_rounded_iv"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_info_about_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="224dp"
            android:background="@drawable/info_background">

            <ImageView
                android:id="@+id/rectangle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical|start"
                android:lineSpacingExtra="0sp"
                android:text="@string/genre"
                android:textAppearance="@style/genre"
                app:layout_constraintStart_toStartOf="@id/rectangle_1"
                app:layout_constraintTop_toTopOf="@id/rectangle_1" />

            <TextView
                android:id="@+id/tv_date_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="207dp"
                android:gravity="center"
                android:lineSpacingExtra="0sp"
                android:text="@string/date_movie"
                android:textAppearance="@style/date_movie"
                app:layout_constraintStart_toEndOf="@id/rectangle_1"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <ImageView
                android:id="@+id/age_limit_ellipse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="298dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_ellipse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/tv_age_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="308dp"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="28dp"
                android:gravity="center"
                android:lineSpacingExtra="0sp"
                android:text="@string/age_limit"
                android:textAlignment="center"
                android:textAppearance="@style/age_limit"
                android:translationY="-0.15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="182dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="63dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="0sp"
                android:text="@string/movie_name"
                android:textAppearance="@style/movie_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                app:constraint_referenced_ids="rating_star_1, rating_star_2, rating_star_3, rating_star_4, rating_star_5"
                app:flow_horizontalGap="2dp"
                app:flow_horizontalStyle="spread_inside"
                app:flow_wrapMode="chain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

            <ImageView
                android:id="@+id/rating_star_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_selected"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/rating_star_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_selected"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="85dp" />

            <ImageView
                android:id="@+id/rating_star_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_selected"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/rating_star_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_selected"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/rating_star_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_unselected"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_description_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="8dp"
                android:text="@string/movie_description"
                android:textAlignment="textStart"
                android:textAppearance="@style/movie_description"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierDescriptionline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_description_movie" />

            <TextView
                android:id="@+id/tv_movie_actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:gravity="center_vertical|start"
                android:lineSpacingExtra="0sp"
                android:text="@string/actors"
                android:textAppearance="@style/actors_name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barrierDescriptionline" />

            <HorizontalScrollView
                android:id="@+id/scroll_view_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_actors"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_horizontal_scroll_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="46dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_actor_1"
                        android:layout_width="150dp"
                        android:layout_height="196dp"
                        app:srcCompat="@drawable/artist_image_1"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        app:shapeAppearanceOverlay="@style/artist_rounded_iv"
                        android:scaleType="centerCrop"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_actor_2"
                        android:layout_width="150dp"
                        android:layout_height="196dp"
                        app:srcCompat="@drawable/artist_image_2"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        app:shapeAppearanceOverlay="@style/artist_rounded_iv"
                        android:scaleType="centerCrop"
                        app:layout_constraintLeft_toRightOf="@id/iv_actor_1"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_actor_3"
                        android:layout_width="150dp"
                        android:layout_height="196dp"
                        app:srcCompat="@drawable/artist_image_3"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        app:shapeAppearanceOverlay="@style/artist_rounded_iv"
                        android:scaleType="centerCrop"
                        app:layout_constraintLeft_toRightOf="@id/iv_actor_2"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_actor_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/actor_1"
                        android:textAppearance="@style/actors_name"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_actor_1"
                         />

                    <TextView
                        android:id="@+id/tv_actor_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/actor_2"
                        android:textAppearance="@style/actors_name"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/iv_actor_1"
                        app:layout_constraintTop_toBottomOf="@id/iv_actor_2" />

                    <TextView
                        android:id="@+id/tv_actor_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/actor_3"
                        android:textAppearance="@style/actors_name"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/iv_actor_3"
                        app:layout_constraintLeft_toRightOf="@id/iv_actor_2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>