<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/movie_details_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/details_fragment_scene">

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_banner_height"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/movie_details_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/movie_details_guideline_begin"/>

        <ImageView
            android:id="@+id/movie_details_panel_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/iv_banner"
            app:layout_constraintTop_toTopOf="@id/movie_details_guideline"
            app:srcCompat="@drawable/info_background" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/movie_details_panel_top">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_info_about_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_genre"
                    style="@style/BaseText.movie_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_left_margin"
                    android:layout_marginTop="@dimen/age_limit_top_margin"
                    android:text="@string/genre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_date_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/date_movie_margin_start"
                    android:layout_marginTop="@dimen/date_movie_margin_top"
                    android:gravity="center"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/date_movie"
                    android:textAppearance="@style/date_movie"
                    app:layout_constraintStart_toEndOf="@id/tv_genre"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/tv_age_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/age_limit_image_margin_top"
                    android:layout_marginEnd="@dimen/main_left_margin"
                    android:background="@drawable/ic_ellipse"
                    android:gravity="center"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/age_limit"
                    android:textAlignment="center"
                    android:textAppearance="@style/age_limit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_left_margin"
                    android:layout_marginTop="@dimen/movie_tittle_margin_top"
                    android:lineSpacingExtra="0sp"
                    app:layout_constrainedWidth="true"
                    android:text="@string/movie_name"
                    android:textAppearance="@style/movie_name"
                    app:layout_constraintEnd_toStartOf="@id/tv_age_limit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_date_movie" />

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flow_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_left_margin"
                    android:layout_marginTop="@dimen/rating_start_margin_top"
                    app:constraint_referenced_ids="rating_star_1, rating_star_2, rating_star_3, rating_star_4, rating_star_5"
                    app:flow_horizontalGap="2dp"
                    app:flow_horizontalStyle="spread_inside"
                    app:flow_wrapMode="chain"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

                <ImageView
                    android:id="@+id/rating_star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_unselected"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/rating_star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_unselected"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="85dp" />

                <ImageView
                    android:id="@+id/rating_star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_unselected"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/rating_star_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_unselected"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/rating_star_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_unselected"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_description_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_left_margin"
                    android:layout_marginTop="@dimen/movie_desc_margin_top"
                    android:layout_marginEnd="@dimen/movie_desc_margin_end"
                    android:text="@string/movie_description"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/movie_description"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/flow_rating" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrierDescriptionline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_description_movie" />

                <TextView
                    android:id="@+id/tv_movie_actors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_left_margin"
                    android:layout_marginTop="@dimen/movie_actors_margin_top"
                    android:gravity="center_vertical|start"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/actors"
                    android:textAppearance="@style/actors_name"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrierDescriptionline" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_actors"
                    tools:listitem="@layout/item_actor" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.constraintlayout.widget.ConstraintLayout>